fixed text align issue on breakpoint

--- a/css/style.scss
+++ b/css/style.scss
@@ -416,7 +416,7 @@ section {
     h3 {
         color:white;
         margin-bottom:1em;
-        text-align: left;
+        text-align: center;
     }
 
 
@@ -493,6 +493,12 @@ section {
     }
 }
 
+
+@media only screen and(min-width:700px) {
+    .about h3 {
+        text-align: center;
+    }
+}
 
 @media only screen and (min-width: 800px) {
 
@@ -678,6 +684,7 @@ section {
 
         h3 {
             font-size:2.5em;
+            text-align: left;
         }
 
     }
